[gd_scene load_steps=8 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://gfx/blackboard.jpg" type="Texture" id=2]
[ext_resource path="res://gfx/blue_button11.png" type="Texture" id=3]
[ext_resource path="res://gfx/blue_button12.png" type="Texture" id=4]
[ext_resource path="res://gfx/Feltpen.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 33
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 5 )

[node name="Control" type="Control"]
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.84833
margin_right = 1032.0
margin_bottom = 595.848
texture = ExtResource( 2 )
expand = true

[node name="okButton" type="TextureButton" parent="."]
margin_left = 873.164
margin_top = 445.742
margin_right = 947.164
margin_bottom = 515.742
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_group_": true
}

[node name="ok" type="Label" parent="okButton"]
margin_left = 7.10669
margin_top = 3.13324
margin_right = 73.1067
margin_bottom = 66.1332
custom_fonts/font = SubResource( 1 )
text = "Ok"
__meta__ = {
"_edit_group_": true
}

[node name="PlayerText" type="TextEdit" parent="."]
margin_left = 84.7012
margin_top = 430.149
margin_right = 797.701
margin_bottom = 517.149
custom_fonts/font = SubResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1026.0
margin_bottom = 421.0

[node name="DisplayText" type="Label" parent="VBoxContainer"]
margin_right = 1026.0
margin_bottom = 240.0
custom_fonts/font = SubResource( 2 )
text = "Welcome to this game.

"
autowrap = true
[connection signal="pressed" from="okButton" to="." method="_on_okButton_pressed"]
